tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SFMandComputers-AAAAAAAAAAAAAAAAAAAAHw==__YourFirstMicroch-AAAAAAAAAAAAAAAAAAAG0g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1746,
  "prerequisites": [
    1745
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Microchips will be used in most things you make, so if possible; I suggest bulk crafting quite a few of these.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Your First Microchip",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1745
  ],
  "rewards": [],
  "tasks": []
}
